--- a/mysite/main/templates/base.html
+++ b/mysite/main/templates/base.html
@@ -9,12 +9,18 @@
 
 </head>
 <body>
-    {% block content%}
+    {% if messages %}
+    <ul class="messages">
+        {% for message in messages %}
+        <li {% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+        {% endfor %}
+    </ul>
+    {% endif %}
+    {%  block content%}
 
 
     
-    {% endblock content %}
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-
+    {% endblock%}
 </body>
 </html>
