--- a/mysite/main/templates/index.html
+++ b/mysite/main/templates/index.html
@@ -18,7 +18,7 @@
     <label for="desc">Description:</label><br>
     <textarea id="desc" name="desc" class="form-control"></textarea><br>
     <label for="due">Due Date:</label><br>
-    <input type="date" id="due" name="due" class="form-control"><br>
+    <input type="datetime-local" id="due" name="due" class="form-control"><br>
     <input type="submit" value="Save" class="btn btn-primary">
   </form> 
 
