--- a/mysite/main/templates/task.html
+++ b/mysite/main/templates/task.html
@@ -5,7 +5,7 @@
     <p>{{task.desc}}</p>
     <p>{{task.created}}</p>
     <p>{{task.due}}</p>
-   
+    <p>Duration: {{ duration }}</p>
     <p>{{task.completed}}</p>
 
     {% endblock content %}
