--- a/mysite/main/templates/base.html
+++ b/mysite/main/templates/base.html
@@ -8,30 +8,36 @@
     <title>ToDo</title>
     <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
 </head>
 <body>
     
-        {% for message in messages %}
-        {% if "error" in message.tags %}
-        <div class="alert alert-danger alert-dismissible fade show w-50 mx-auto" role="alert">
-            <strong>Hey</strong> {{ message }}
-          </div>
-          {% else %}
-          <div class="alert alert-success alert-dismissible fade show w-50 mx-auto" role="alert">
-            <strong>Hey</strong> {{ message }}
-          </div>
-        {% endif %}
-        {% endfor %}
+    <center>
+        <div class="container-fluid task-container py-5 px-5">
 
  
+            {% for message in messages %}
+            {% if "error" in message.tags %}
+            <div class="alert alert-danger alert-dismissible fade show w-50 mx-auto" role="alert">
+                <strong>Hey</strong> {{ message }}
+              </div>
+              {% else %}
+              <div class="alert alert-success alert-dismissible fade show w-50 mx-auto" role="alert">
+                <strong>Hey</strong> {{ message }}
+              </div>
+            {% endif %}
+            {% endfor %}
 
 
     {%  block content%}
 
 
-   
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+
+
+    
+ 
     {% endblock%}
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+    <script src="{% static 'js/main.js' %}"></script>
 </body>
 </html>
