--- a/mysite/main/templates/index.html
+++ b/mysite/main/templates/index.html
@@ -2,7 +2,6 @@
     {% block content%}
     {% load timedelta_filter %}
 
-
 <div class="w-50 py-5 px-5 create-task">
 
 <h1>Create new task:</h1>
@@ -40,7 +39,7 @@
     <label for="due"><h3 class="color-text">Date:</h3></label>
   </div>
 <div class="col-10 d-flex align-items-center">
-    <input type="datetime-local" id="due" name="due" class="form-control" value="">
+    <input type="datetime-local" id="due" name="due" class="form-control" value="{% now "jS F Y H:i" %}">
   </div>
 </div>
 
