--- a/mysite/main/templates/base.html
+++ b/mysite/main/templates/base.html
@@ -17,7 +17,7 @@
 <body>
     
     <center>
-        <div class="container-fluid task-container py-5 px-5">
+        <div class="container-fluid task-container py-5 px-5 min-vh-100">
 
  
             {% for message in messages %}
