--- a/mysite/main/templates/navbar.html
+++ b/mysite/main/templates/navbar.html
@@ -9,12 +9,21 @@
         <ul class="navbar-nav me-auto">
           <li class="nav-item">
             {% if request.user.is_authenticated%}
-            <a class="nav-link active" aria-current="page" href="#">{{request.user}}</a>
+            <a class="nav-link active" aria-current="page" href="/">{{request.user}}</a>
             {%else%}
-            <a class="nav-link active" aria-current="page" href="#">Login</a>
+            <a class="nav-link active" aria-current="page" href="/login">Login</a>
             {% endif %}
           </li>
 
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="/register">Register</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="/login">login</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="/logout">logout</a>
+          </li>
         </ul>
       </div>
     </div>
