--- a/mysite/main/templates/login.html
+++ b/mysite/main/templates/login.html
@@ -4,7 +4,7 @@
 
 <div class="w-50 text-start">
 
-    <h1 class="text-center">Register new user</h1>
+    <h1 class="text-center">Login</h1>
     <br>
     <br>
     <form method="POST">
