--- a/mysite/main/templates/navbar.html
+++ b/mysite/main/templates/navbar.html
@@ -6,7 +6,8 @@
       </button>
 
       <div class="collapse navbar-collapse" id="navbarsExample02">
-        <ul class="navbar-nav me-auto">
+        <ul class="navbar-nav ms-auto">
+         
           <li class="nav-item">
             {% if request.user.is_authenticated%}
             <a class="nav-link active" aria-current="page" href="/">{{request.user}}</a>
@@ -15,15 +16,16 @@
             {% endif %}
           </li>
 
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="/register">Register</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="/login">login</a>
-          </li>
+
+          {% if request.user.is_authenticated%}
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="/logout">logout</a>
           </li>
+          {% else %}
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="/register">Register</a>
+          </li>
+          {% endif %}
         </ul>
       </div>
     </div>
